--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,176 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: rgb(241, 186, 102);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+.ches {
+  padding: 20px 20px;
+  perspective: 1000px;
+}
+.ches__body {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.ches__left-btns {
+  position: relative;
+}
+.ches__board-btn {
+  width: 80px;
+  height: 80px;
+  border: none;
+  background-color: #fff;
+  display: block;
+  margin: 20px 0;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.ches__board-btn:hover {
+  background-color: #f19c74;
+  box-shadow: 0 0 30px 13px #d8cb15 inset;
+  z-index: 4;
+  transition: all 0.2s ease;
+}
+.ches__img {
+  width: 70px;
+  height: 70px;
+}
+.ches__board {
+  margin: 20px 0 0 0;
+  border: 5px solid rgb(80, 60, 22);
+  width: 600px;
+  height: 600px;
+  padding: 0 7px;
+  background-color: rgb(80, 60, 22);
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  transform-style: preserve-3d;
+}
+.ches__item {
+  width: 72px;
+  height: 72px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ches__item:hover {
+  box-shadow: 0px 0px 17px 13px #ff2929 inset;
+}
+.ches__list-table {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+.ches__three-d {
+  width: 60px;
+  height: 40px;
+  margin: 0 0 10px 0;
+  border: none;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 22px;
+  font-weight: 500;
+}
+.red {
+  -webkit-box-shadow: 0px 0px 30px 13px red inset;
+  box-shadow: 0px 0px 31px 13px red inset;
+}
+.green {
+  -webkit-box-shadow: 0px 0px 30px 13px #09ff00 inset;
+  box-shadow: 0px 0px 31px 13px #09ff00 inset;
+}
+.ches__text {
+  font-size: 20px;
+  color: rgb(80, 60, 22);
+  width: 60px;
+  height: 40px;
+  background-color: #fff;
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 5px;
+  justify-content: center;
+  display: flex;
+}
+.anim3D {
+  transform: rotateX(45deg) scale(1.3) translateY(-50px);
+}
+.piyoda {
+  background-image: url(../images/onthefoot.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+} 
+ .farzin {
+  background-image: url(../images/farzin.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.farzin2 {
+  background-image: url(../images/farzin.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.queen {
+  background-image: url(../images/queen.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.king {
+  background-image: url(../images/king.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 75px !important;
+  background-color: #fff !important;
+}
+.bishop {
+  background-image: url(../images/fill.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.bishop2 {
+  background-image: url(../images/fill.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.horse {
+  background-image: url(../images/horse.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+.horse2 {
+  background-image: url(../images/horse.svg) !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  width: 72px;
+  height: 72px !important;
+  background-color: #fff !important;
+}
+
 
